--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
+    "ember-simple-auth": "1.0.1",
     "ember-try": "~0.0.8",
     "supertree-shared-config": "0.0.2"
   },
