--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   "dependencies": {
     "ember-cli-babel": "^5.1.5",
     "ember-cli-htmlbars": "^1.0.1",
-    "ember-simple-auth": "1.0.1"
+    "ember-simple-auth": "1.0.1",
+    "ember-i18n": "4.2.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
