--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "supertree-auth",
-  "version": "0.0.7",
+  "version": "0.0.9",
   "description": "Shared auth flow for supertree apps.",
   "directories": {
     "test": "tests"
@@ -21,7 +21,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
-    "ember-cli": "1.13.14",
+    "ember-cli": "1.13.15",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.1.0",
@@ -32,12 +32,12 @@
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^1.2.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "1.13.15",
+    "ember-data": "2.4.0-beta.2",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-try": "~0.0.8",
-    "supertree-shared-config": "0.0.2"
+    "supertree-shared-config": "0.0.3"
   },
   "keywords": [
     "ember-addon"
